<resources>
    <string name="app_name">maj_org</string>
    <string name="host_your_event_by_filling_the_following_details">Host your event by filling the following details</string>
    <string name="event_name">Event name</string>
    <string name="organizer">Organizer</string>
    <string name="name1">Name</string>
    <string name="event_date">Event date</string>
    <string name="name2">Name</string>
    <string name="upload_image">Upload image</string>
    <string name="host">Host</string>
    <string name="sign_up">Sign up</string>
    <string name="name3">Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password_number">Password(number)</string>
    <string name="signup">Signup</string>
    <string name="add_brochure">Add brochure</string>
    <string name="brochure">Brochure</string>


    <string-array name="domain_array">
        <item>Technical</item>
        <item>Non-Technical</item>

    </string-array>

    <string-array name="duration_array">
        <item>1-day</item>
        <item>2-day</item>
        <item>3-day</item>
    </string-array>

</resources>