<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8ECFB"
    tools:context=".register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#C8ECFB"
            android:ems="10"
            android:hint="@string/name3"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/em"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#C8ECFB"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/mob"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#C8ECFB"
            android:ems="10"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#C8ECFB"
            android:ems="10"
            android:hint="@string/password_number"
            android:inputType="numberPassword"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/signu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2276DC"
            android:text="@string/signup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>